--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,11 @@
       <version>5.2.12.RELEASE</version>
     </dependency>
 
-
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.9.6</version>
+    </dependency>
   </dependencies>
 
   <build>
